styles.css
a:link{
    color: #f0cf57;
    text-decoration: none; 
}
a:hover{
    color: #406e8eff;
}
a:visited{
    color: #f0cf57;
}
body{
    background-color:#23395bff;
    display: block; 
    margin: 0px; 
}
h1{
    Font-Family: 'Work Sans', Sans-Serif;
    Font-Size: 65px;
    color:#cbf7edff;
}
h2{
    Font-Family: 'Work Sans', Sans-Serif;
    Font-Size: 45px;
    color:#cbf7edff;
    margin-left: 25px;
}
img{
    display: block;
    position: relative;

}
main{}
nav{}
p{
    color:#cbf7edff;
    margin-left: 25px;
}

/* classes */
.about-me-container{
    margin: 20px 0px;
    width: 100%;
    height: auto;
    overflow: hidden;
    position: relative; 
}
.about-me-head{
    z-index: 1;
}
.about-me-text{
    Font-Family: 'Open Sans', Sans-Serif;
    Font-Size: 40px;
}
.abz-container{
    position: relative;
}
.contact-container{}
.contact-link{
    Font-Family: 'Open Sans', Sans-Serif;
    Font-Size: 25px;
}
.background-img{
    overflow: hidden;
    width: 100%;
    height: auto;
    z-index: -1;
}
.footer-text{
    Font-Family: 'Open Sans', Sans-Serif;
    Font-Size: 25px;
}
.jyv-container{
    position: relative;
}
.nav-container{
    display: inline-flex;
    justify-content: space-between;
    margin-left: 25px;
    width: 100%;
    
}
.navigation-items{
    
    padding-top: 58px;
    padding-right: 50px;
}
.navigation-item{
    
    display: inline;
    Font-Family: 'Work Sans', Sans-Serif;
    Font-Size: 35px;
    padding-left: 30px;
    float: left;
}
.rd-container{
    position: relative;
    
}
.sf-container{
    position: relative;
}
.tech-container{}
.tech-head{}
.tech-text{
    Font-Family: 'Open Sans', Sans-Serif;
    Font-Size: 25px;
}

/* ids */
#abz-img{

}
#abz-txt{

}
#hello-there {
    position: absolute;
    text-align: center;
    width: 100%;
    margin: 0;
    top: 25%;
}
#jyv-img{
    filter: blur(4px);
}
#jyv-txt{

}
#rd-img{
    
}
#rd-txt{

}
#sf-img{
    
}
#sf-txt{

}


/* Fonts 

Font-Family: 'Work Sans', Sans-Serif;
Font-Size: 45px;
Font-Family: 'Open Sans', Sans-Serif;
Font-Size: 15px;

*/
/* Colors 

CSS HEX 
--rich-black-fogra-29: #161925ff;
--prussian-blue: #23395bff;
--queen-blue: #406e8eff;
--cadet-grey: #8ea8c3ff;
--light-cyan: #cbf7edff;
-- LINK COLOR: #f0cf57;

CSS HSL 
--rich-black-fogra-29: hsla(228, 25%, 12%, 1);
--prussian-blue: hsla(216, 44%, 25%, 1);
--queen-blue: hsla(205, 38%, 40%, 1);
--cadet-grey: hsla(211, 31%, 66%, 1);
--light-cyan: hsla(166, 73%, 88%, 1);


js & css animations to add
- on scroll text items fade in 
- when text items fade in the images blur 
- when text items are out of view the images slowly become clear 
- technology icons also buttons that depress sligthly on hover and fully on click

*/

